test/tests/errors/error-valof-no-return.sm
// true
// true
// false
/**/
/**/

program {
    var x: int = valof: int {
        var a: int = 1;
        var b: int = 1;
        a = a + b;
    };
}